@@ -3,6 +3,7 @@ Revision history for Perl extension Puzzle.
 0.06
 	- Add a script to create folders and files minimum structure
 	- Change httpd.conf documentation to deny access to internal files
+	- In config.yaml mail parameter is now optional.
 
 0.05  Mon Jan 31 15:21:49 CET 2011
 	- Now database connection is not a mandatory. You can use Puzzle without
